--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8"></meta>
+    <meta charset="utf-8">
     <script src="jquery.min.js"></script>
     <script src="base.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
@@ -14,21 +14,6 @@
     <input id="val">
     <input type="button" class="btn btn-primary" value="Generate">
     <div id="viz" class="mat">
-      <div id="r1" class="row">
-        <div id="c11" class="cell"></div>
-        <div id="c12" class="cell"></div>
-        <div id="c13" class="cell"></div>
-      </div>
-      <div id="r2" class="row">
-        <div id="c21" class="cell"></div>
-        <div id="c22" class="cell"></div>
-        <div id="c23" class="cell"></div>
-      </div>
-      <div id="r3" class="row">
-        <div id="c31" class="cell"></div>
-        <div id="c32" class="cell"></div>
-        <div id="c33" class="cell"></div>
-      </div>
     </div>
   </body>
 </html>
