initial raphael version

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="jquery.min.js"></script>
+    <script src="raphael-min.js"></script>
     <script src="base.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="base.css">
@@ -13,7 +14,6 @@
     <hr>
     <input id="val">
     <input type="button" class="btn btn-primary" value="Generate">
-    <div id="viz" class="mat">
-    </div>
+    <div id="canvas" class="canvas"></div>
   </body>
 </html>
