nice two polygons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script src="jquery.min.js"></script>
     <script src="raphael-min.js"></script>
+    <script src="sha1.js"></script>
     <script src="base.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="base.css">
@@ -14,6 +15,14 @@
     <hr>
     <input id="val">
     <input type="button" class="btn btn-primary" value="Generate">
-    <div id="canvas" class="canvas"></div>
+    <hr>
+    <div id="c1" class="canvas"></div>
+    <div id="c2" class="canvas"></div>
+    <div id="c3" class="canvas"></div>
+    <div id="c4" class="canvas"></div>
+    <div id="c5" class="canvas"></div>
+    <div id="c6" class="canvas"></div>
+    <div id="c7" class="canvas"></div>
+    <div id="c8" class="canvas"></div>
   </body>
 </html>
