--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     <script src="base.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" type="text/css" href="base.css">
-    <title>Hash Visualization</title>
+    <title>Polyhash</title>
   </head>
   <body>
-    <h1>Hash Visualization</h1>
-    <hr>
-    <input id="val">
-    <input type="button" class="btn btn-primary" value="Generate">
-    <hr>
-    <div id="c1" class="canvas"></div>
-    <div id="c2" class="canvas"></div>
-    <div id="c3" class="canvas"></div>
-    <div id="c4" class="canvas"></div>
-    <div id="c5" class="canvas"></div>
-    <div id="c6" class="canvas"></div>
-    <div id="c7" class="canvas"></div>
-    <div id="c8" class="canvas"></div>
+    <div class="container">
+      <h1 class="big">Polyhash</h1>
+      <div id="c1" class="canvas"></div>
+      
+      <hr>
+      
+      <h2>About</h2>
+      <p>Polyhash is an easy way to generate aesthetic, easily identifiable, icons for hashed values</p>
+
+      <h2>Usage</h2>
+      <ol>
+        <li>Include the script on the page: <code>&lt;script src="http://github.com/bla/bla"&gt;</code></li>
+        <li>Add the class</li>
+      </ol>
+    </div>
   </body>
 </html>
